--- a/PSF.WebApp/Views/Funcionario/Inserir.cshtml
+++ b/PSF.WebApp/Views/Funcionario/Inserir.cshtml
@@ -3,10 +3,10 @@
 
 <form asp-action="InserirConfirmar" asp-controller="Funcionario" method="POST">
     <label class="control-label">Código do Funcionário: </label>
-    <input asp-for="Id_Raca" class="form-control" />
+    <input asp-for="Id" class="form-control" />
 
     <label class="control-label">CPF:</label>
-    <input asp-for="Nome_Raca" class="form-control" />
+    <input asp-for="NomeRaca" class="form-control" />
 
     <label class="control-label">Data de Nascimento:</label>
     <input asp-for="Tamanho" class="form-control" />
