--- a/PSF.WebApp/Views/Raca/Index.cshtml
+++ b/PSF.WebApp/Views/Raca/Index.cshtml
@@ -1,6 +1,10 @@
 ﻿@using PSF.Dominio.Entities;
 
-@model IEnumerable<Raca>
+@{
+    ViewData["Title"] = "Raca";
+}
+
+@model List<Raca>
 
 <table class="table table-striped table-sm">
     <thead>
