Criação da controller de porte

--- a/PSF.WebApp/Views/Funcionario/Inserir.cshtml
+++ b/PSF.WebApp/Views/Funcionario/Inserir.cshtml
@@ -1,17 +1,17 @@
 ﻿@using PSF.Dominio.Entities;
 @model Raca
 
-<form asp-action="InserirConfirmar" asp-controller="Funcionario" method="POST">
+<form asp-action="InserirConfirmar" asp-controller="Raca" method="POST">
     <label class="control-label">Código do Funcionário: </label>
     <input asp-for="Id" class="form-control" />
 
-    <label class="control-label">CPF:</label>
+    <label class="control-label">Nome Raca:</label>
     <input asp-for="NomeRaca" class="form-control" />
 
-    <label class="control-label">Data de Nascimento:</label>
+    <label class="control-label">Tamanho:</label>
     <input asp-for="Tamanho" class="form-control" />
 
-    <label class="control-label">Nome:</label>
+    <label class="control-label">Porte:</label>
     <input asp-for="Porte" class="form-control" />
 
     <hr />
