--- a/PSF.WebApp/Views/Raca/Inserir.cshtml
+++ b/PSF.WebApp/Views/Raca/Inserir.cshtml
@@ -5,7 +5,7 @@
     <label class="control-label">Nome da Raça:</label>
     <input asp-for="NomeRaca" class="form-control" />
 
-    <label class="control-label">Tamanho:</label>
+    <label class="control-label">Tamanho em centimetro:</label>
     <input asp-for="Tamanho" class="form-control" />
 
     <label class="control-label">Porte:</label>
