Corrigindo erros para buildar

--- a/PSF.WebApp/Views/Usuario/Inserir.cshtml
+++ b/PSF.WebApp/Views/Usuario/Inserir.cshtml
@@ -10,9 +10,9 @@
 
     <label class="control-label">Ativo:</label>
     @* <input asp-for="Ativo" class="form-control" /> *@
-    <select asp-for="ATIVO" class="form-control">
-        <option value="A">Ativo</option>
-        <option value="I">Inativo</option>
+    <select asp-for="Ativo" class="form-control">
+        <option value="true">Ativo</option>
+        <option value="false">Inativo</option>
     </select>
 
     <hr />
