--- a/PSF.WebApp/Views/Usuario/Index.cshtml
+++ b/PSF.WebApp/Views/Usuario/Index.cshtml
@@ -25,7 +25,7 @@
                     @item.Nome
                 </td>
                 <td>
-                    @item.ATIVO
+                    @item.Ativo
                 </td>
                
                 <td>
