--- a/PSF.WebApp/Views/Usuario/Inserir.cshtml
+++ b/PSF.WebApp/Views/Usuario/Inserir.cshtml
@@ -5,8 +5,8 @@
     <label class="control-label">Nome do Usuario:</label>
     <input asp-for="Nome" class="form-control" />
 
-    <label class="control-label">Nome:</label>
-    <input asp-for="Nome" class="form-control" />
+    <label class="control-label">Senha:</label>
+    <input asp-for="Senha" class="form-control" />
 
     <label class="control-label">Ativo:</label>
     @* <input asp-for="Ativo" class="form-control" /> *@
